2004-08-15 Gareth Jones <gareth_jones@users.berlios.de>

	* Makefile: Added building testsuite & check target.
	* testsuite/Makefile: Added.
	* testsuite/README: Added.

	* testsuite/runtest: Added.
	* testsuite/runtest: Fixed to run in tests' own directories.
	* testsuite/runtest: Added logging.

	* testsuite/libprometheus/Makefile: Added.
	* testsuite/libprometheus/finish/success.bash.in: Added.
	* testsuite/libprometheus/finish/failure.bash.in: Added.
	* testsuite/libprometheus/terminated/terminated.bash.in: Added.
	* testsuite/libprometheus/pipestat/*: Added.
	* testsuite/libprometheus/warning/*: Added.
	* testsuite/libprometheus/failure/*: Added.
	* testsuite/libprometheus/error/*: Added.
	* testsuite/libprometheus/usage_error/*: Added.
	* testsuite/libprometheus/script_usage_err/*: Added.

2004-08-12 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/pkgunpack.in (unpack_archives): Make sure build directories
	  exist.

	* scripts/pkginstall.in (cleanup_failed): Added FIXME for restoring
	  backups.

2004-08-06 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/pkgadd.in: Added -f/--leave-files option.
	* man/pkgadd.8.in: Documented -f/--leave-files option.

	* All files: Changed Oliver's email address to
	  <oliverbrakmann@users.berlios.de>.

2004-08-05 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/pkgadd.in (get_package_list): Dependency checking is
	  actually skipped if $stage < 2.

	* man/pkginstall.8.in: Added note about restoring a backed-up package
	  after a failed installation.

	* man/pkgadd.8.in: Written.

	* scripts/libprometheus.bash.in (set_directory): Build packages in
	  $builddir/$package ($package_builddir) instead of $builddir.
	* scripts/pkgunpack.in: Use $package_builddir where appropriate.
	* scripts/pkgadd.in: Remove $package_builddir if installation
	  successful.

2004-08-04 Gareth Jones <gareth_jones@users.berlios.de>

	* scripts/pkgadd.in: Dependency checking implemented.
