@@ -1,0 +1,29 @@
+#! /bin/bash -x
+
+# Prometheus package management tool set
+# Copyright (C) 2003-2004 Oliver Brakmann <oliverbrakmann@users.berlios.de> &
+# Gareth Jones <gareth_jones@users.berlios.de>
+#
+# This program is free software; you can redistribute it and/or modify it under
+# the terms of the GNU General Public License as published by the Free Software
+# Foundation; either version 2 of the License, or (at your option) any later
+# version.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+# details.
+#
+# You should have received a copy of the GNU General Public License along with
+# this program; if not, write to the Free Software Foundation, Inc., 59 Temple
+# Place, Suite 330, Boston, MA  02111-1307  USA
+
+# Test `setup_logging' with $terminal_output=yes & $logfile=/some/file.
+
+source "%LIBPROMETHEUS%" || exit 1
+
+terminal_output=yes
+logfile="/some/file"
+
+setup_logging
+[[ "$log_target" == '2>&1 | tee --append "/some/file"' ]]
