@@ -1,3 +1,7 @@
+2004-08-16 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* testsuite/libprometheus/Makefile: Made test descriptions more useful.
+
 2004-08-15 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* Makefile: Added building testsuite & check target.
